IC and EM details improvements